--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
 
     <main class="mx-auto w-[1200px] flex">
 
-        <div class="bg-slate-700 w-[200px] h-[650px] border-e-[20px] border-slate-500 sblock ">
+        <div class="bg-slate-700 me-[20px] w-[200px] h-[650px] border-e-[20px] border-slate-500 sblock ">
             
         </div>
         <div>
             <div class="flex">
-                <div class="bg-slate-700 w-[200px] h-[300px] ms-[10px] border-s-[20px] border-b-[20px] border-slate-500 sblock"></div>
+                <div class="bg-slate-700 w-[200px] h-[290px] ms-[10px] border-s-[20px] border-b-[20px] border-slate-500 sblock"></div>
 
                 <div class="flex flex-col gap-[0px]">
                     <div class="bg-slate-700 w-[690px] h-[50px] ms-[0px] sblock border-b-[20px] border-slate-500"></div>
 
                     <div class="flex">
-                        <div class="bg-slate-700 w-[200px] h-[250px] ms-[0px] mt-[0px] border-e-[20px] border-b-[20px] border-slate-500 sblock"></div>
+                        <div class="bg-slate-700 w-[200px] h-[240px] ms-[0px] mt-[0px] border-e-[20px] border-b-[20px] border-slate-500 sblock"></div>
 
                         <div class="bg-slate-700 w-[335px] h-[230px] mt-[10px] ms-[10px] border-[20px] border-slate-500 sblock"></div>
 
-                        <div class="bg-slate-700 w-[135px] h-[250px] ms-[10px] border-s-[20px] border-slate-500 sblock"></div>
+                        <div class="bg-slate-700 w-[135px] h-[250px] ms-[20px] border-s-[20px] border-slate-500 sblock"></div>
                     </div>
                 </div>
             </div>
@@ -47,13 +47,13 @@
                 <div class="bg-slate-700 w-[210px] h-[340px] mt-[10px] border-t-[20px] border-e-[20px] border-slate-500 sblock"></div>
 
                 <div>
-                    <div class="bg-slate-700 w-[280px] h-[125px] ms-[10px] mt-[0px] border-[20px] border-t-[0px] border-slate-500  sblock"></div>
-                    <div class="bg-slate-700 w-[300px] h-[215px] mt-[10px] border-t-[20px] border-slate-500 sblock"></div>
+                    <div class="bg-slate-700 w-[280px] h-[125px] ms-[20px] mt-[0px] border-[20px] border-t-[0px] border-slate-500  sblock"></div>
+                    <div class="bg-slate-700 w-[300px] h-[205px] mt-[20px] border-t-[20px] border-slate-500 sblock"></div>
                 </div>
 
-                <div class="bg-slate-700 w-[245px] h-[350px] mt-[0px]  border-s-[20px] border-t-[20px] border-e-[20px] border-slate-500 sblock"></div>
+                <div class="bg-slate-700 w-[225px] ms-[20px] h-[340px] mt-[10px]  border-s-[20px] border-t-[20px] border-e-[20px] border-slate-500 sblock"></div>
 
-                <div class="bg-slate-700 w-[135px] h-[350px] mt-[0px] ms-[10px] border-s-[20px] border-slate-500 sblock"></div>
+                <div class="bg-slate-700 w-[135px] h-[350px] mt-[0px] ms-[20px] border-s-[20px] border-slate-500 sblock"></div>
             </div>
 
             
